--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -5,6 +5,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'website/**'
+      - '.github/workflows/cicd.yaml'
 
 jobs:
   deploy:
@@ -19,7 +22,7 @@ jobs:
 
       - uses: actions/setup-python@v4
         with:
-          python-version: 3.12
+          python-version: 3.11
 
       - uses: quarto-dev/quarto-actions/setup@v2
 
