--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -31,7 +31,7 @@ jobs:
       - uses: quarto-dev/quarto-actions/setup@v2
 
       - name: install requirements
-        run: just setup
+        run: just setup --system
 
       - name: build site
         run: just docs-build
