--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -34,6 +34,7 @@ jobs:
         run: just setup
 
       - name: build site
+        shell: bash
         run: |
           source .venv/bin/activate
           just docs-build
