--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -11,6 +11,7 @@ on:
     paths:
       - 'justfile'
       - 'website/**'
+      - '_quarto.yml'
       - 'dev-requirements.txt'
       - '.github/workflows/cicd.yaml'
 
